--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <script defer src="/__/firebase/10.5.0/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/10.5.0/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/10.5.0/firebase-performance-compat.js"></script>
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
+
+
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
