--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <!-- <link rel="icon" href="/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Darulfaida</title>
+  <meta name="google-site-verification" content="6kXCdRkX9OsrfBsZKV_sQ59zSOS5LaxMnjFPuXFo7X8" />
+  <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
 </head>
 
 <body>
