--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <script defer src="/__/firebase/10.5.0/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/10.5.0/firebase-performance-compat.js"></script>
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
+    <meta name="google-site-verification" content="6kXCdRkX9OsrfBsZKV_sQ59zSOS5LaxMnjFPuXFo7X8" />
 
 
     <!-- 
