--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>Darulfaida</title>
   <meta name="google-site-verification" content="6kXCdRkX9OsrfBsZKV_sQ59zSOS5LaxMnjFPuXFo7X8" />
   <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FCJH3MZQCD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FCJH3MZQCD');
+</script>
 </head>
 
 <body>
