--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,15 @@
     <script defer src="/__/firebase/10.5.0/firebase-performance-compat.js"></script>
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
     <meta name="google-site-verification" content="6kXCdRkX9OsrfBsZKV_sQ59zSOS5LaxMnjFPuXFo7X8" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FCJH3MZQCD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FCJH3MZQCD');
+</script>
 
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
