--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=653df0fefa1dd500198fc77d&product=inline-share-buttons&source=platform" async="async"></script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FCJH3MZQCD"></script>
+<!-- BEGIN SHAREAHOLIC CODE -->
+<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
+<meta name="shareaholic:site_id" content="0df9a4562c208ff1bfcb8be47e5633f7" />
+<script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
+<!-- END SHAREAHOLIC CODE -->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
